--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="sign_up">Sign Up</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="new_user_sign_up">Don\'t have an account? Sign Up</string>
+    <string name="have_account_log_in">Have an account? Log In</string>
 </resources>
