--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">FoodTime</string>
-    <string name="username">Username</string>
+    <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="log_in">Log In</string>
     <string name="sign_up">Sign Up</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="new_user_sign_up">Don\'t have an account? Sign Up</string>
+    <string name="firstName">First Name</string>
+    <string name="lastName">Last Name</string>
     <string name="have_account_log_in">Have an account? Log In</string>
 </resources>
