Changed Button to ToggleButton for Welcome Screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="welcome">Welcome</string>
     <string name="to">To</string>
     <string name="next">Next</string>
+    <string name="skip">Skip</string>
     <string name="finish">Finish</string>
     <string name="get_your_food">Get your food</string>
     <string name="on_time">on time</string>
