--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,7 @@
     <string name="change_password">Change Password</string>
     <string name="log_out">Log out</string>
     <string name="select_a_restaurant">Select a restaurant</string>
+
+    <string name="just_return">Return</string>
+    <string name="add_to_cart">Add to cart</string>
 </resources>
