--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="select_a_restaurant">Select a restaurant</string>
 
     <string name="just_return">Return</string>
+    <string name="cancel">Cancel</string>
     <string name="add_to_cart">Add to cart</string>
 </resources>
