Add Cart and Checkout fragments. List all items in the Cart fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,6 @@
     <string name="just_return">Return</string>
     <string name="cancel">Cancel</string>
     <string name="add_to_cart">Add to cart</string>
+    <string name="checkout">Checkout</string>
 
 </resources>
