--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,8 @@
     <string name="email_hint" />
     <string name="reset_password" />
     <string name="reset" />
+    <string name="profile_name">Profile Name</string>
+
 
     <string name="select_a_restaurant">Select a restaurant</string>
 
